--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile files('D:/AndroidStudioProjects/CarShare/libraries/asmack-android-8-4.0.6.jar')
+    compile files('D:/AndroidStudioProjects/CarShare/libraries/dnsjava-2.1.6.jar')
 }
